Client #34 fixed displaying of timer on mobile and smaller css changes in leaderboard

--- a/src/styles/views/LeaderBoardView.scss
+++ b/src/styles/views/LeaderBoardView.scss
@@ -81,7 +81,7 @@
     -ms-transform: rotate(-20deg);
     transform: rotate(-20deg);
     max-width: 80%;
-    height: 24em;
+    height: auto;
     width: 18em;
     @media (max-width: 768px) {
       display: none
